--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@
         </div>
     </section>
 
+        <!--     Footer      -->
     <footer class=" bg-dark text-white pt-3 pb-2">
         <div class="container text-md-left">
             
