--- a/Gallery Page/gallery.html
+++ b/Gallery Page/gallery.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HFYV</title>
-    <link rel="shortcut icon" href="./assets/hflogo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/hflogo.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/Stylesheet/gallery.css">
     <script src="https://kit.fontawesome.com/e918c11bd2.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg bg-light sticky-top navbar-light py-2 shadow">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="./assets/hflogo.png" alt="Holy family logo" height= "60px">
+                <img src="/assets/hflogo.png" alt="Holy family logo" height= "60px">
             </a>
             <button class="navbar-toggler shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="fas fa-stream m-2"></span>
@@ -79,40 +79,40 @@
 
                 <div class="row align-item-center my-4 p-2">
                     <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox interior">
-                        <img src="./assets/hfyv1.jpg" class="img-fluid bord rounded w-100" alt="interior image">
+                        <img src="/assets/hfyv1.jpg" class="img-fluid bord rounded w-100" alt="interior image">
                     </div>
                     <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox exterior">
-                        <img src="./assets/hfyv3.jpg" class="img-fluid bord rounded w-100" alt="interior image">
+                        <img src="/assets/hfyv3.jpg" class="img-fluid bord rounded w-100" alt="interior image">
                     </div>
                     <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox interior">
-                        <img src="./assets/hfyv5.JPG" class="img-fluid bord rounded w-100" alt="interior image">
+                        <img src="/assets/hfyv5.JPG" class="img-fluid bord rounded w-100" alt="interior image">
                     </div>
                     <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox interior">
-                        <img src="./assets/hfyv2.jpg" class="img-fluid bord rounded w-100" alt="interior image">
+                        <img src="/assets/hfyv2.jpg" class="img-fluid bord rounded w-100" alt="interior image">
                     </div>
                     <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox exterior">
-                        <img src="./assets/hfyv4.JPG" class="img-fluid bord rounded w-100" alt="interior image">
+                        <img src="/assets/hfyv4.JPG" class="img-fluid bord rounded w-100" alt="interior image">
                     </div>
                     <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox exterior">
-                        <img src="./assets/hfyv1.jpg" class="img-fluid bord rounded w-100" alt="interior image">
+                        <img src="/assets/hfyv1.jpg" class="img-fluid bord rounded w-100" alt="interior image">
                     </div>
                     <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox interior">
-                        <img src="./assets/hfyv1.jpg" class="img-fluid bord rounded w-100" alt="interior image">
+                        <img src="/assets/hfyv1.jpg" class="img-fluid bord rounded w-100" alt="interior image">
                     </div>
                     <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox exterior">
-                        <img src="./assets/hfyv3.jpg" class="img-fluid bord rounded w-100" alt="interior image">
+                        <img src="/assets/hfyv3.jpg" class="img-fluid bord rounded w-100" alt="interior image">
                     </div>
                     <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox interior">
-                        <img src="./assets/hfyv5.JPG" class="img-fluid bord rounded w-100" alt="interior image">
+                        <img src="/assets/hfyv5.JPG" class="img-fluid bord rounded w-100" alt="interior image">
                     </div>
                     <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox interior">
-                        <img src="./assets/hfyv2.jpg" class="img-fluid bord rounded w-100" alt="interior image">
+                        <img src="/assets/hfyv2.jpg" class="img-fluid bord rounded w-100" alt="interior image">
                     </div>
                     <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox exterior">
-                        <img src="./assets/hfyv4.JPG" class="img-fluid bord rounded w-100" alt="interior image">
+                        <img src="/assets/hfyv4.JPG" class="img-fluid bord rounded w-100" alt="interior image">
                     </div>
                     <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox exterior">
-                        <img src="./assets/hfyv1.jpg" class="img-fluid bord rounded w-100" alt="interior image">
+                        <img src="/assets/hfyv1.jpg" class="img-fluid bord rounded w-100" alt="interior image">
                     </div>
                 </div>
                 
@@ -129,7 +129,7 @@
             <div class="row text-md-left">
 
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-1">
-                    <img src="./assets/hflogo.png" alt="holy family logo" class="lg-sz" srcset="">
+                    <img src="/assets/hflogo.png" alt="holy family logo" class="lg-sz" srcset="">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-warnimg">Holy Family Youth Village</h5>
                 </div>
 
