--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg bg-light sticky-top navbar-light py-2 shadow">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="/assets/hflogo.png" alt="Holy family logo" height= 60px">
+                <img src="./assets/hflogo.png" alt="Holy family logo" height= "60px">
             </a>
             <button class="navbar-toggler shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="fas fa-stream m-2"></span>
