--- a/Gallery Page/gallery.html
+++ b/Gallery Page/gallery.html
@@ -7,7 +7,7 @@
     <title>HFYV</title>
     <link rel="shortcut icon" href="/assets/hflogo.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="/Stylesheet/gallery.css">
+    <link rel="stylesheet" href="./Stylesheet/gallery.css">
     <script src="https://kit.fontawesome.com/e918c11bd2.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg bg-light sticky-top navbar-light py-2 shadow">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="/assets/hflogo.png" alt="Holy family logo" height= "60px">
+                <img src="./assets/hflogo.png" alt="Holy family logo" height= "60px">
             </a>
             <button class="navbar-toggler shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="fas fa-stream m-2"></span>
@@ -30,7 +30,7 @@
                         <a class="nav-link" data-bs-toggle="modal" data-bs-target="#exampleModal" href="#">How To Book</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link activebtn" href="/Gallery Page/gallery.html">Gallery</a>
+                        <a class="nav-link activebtn" href="./Gallery Page/gallery.html">Gallery</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">FAQ</a>
