--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <div class="card features-card shadow mb-3">
                             <div class="card-body">
                                 <figure class="text-center">
-                                    <img src="/assets/undraw_electricity_k2ft.svg" alt="fast-loading.png" height="100px">
+                                    <img src="./assets/undraw_electricity_k2ft.svg" alt="fast-loading.png" height="100px">
                                 </figure>
                                 <h4 class="text-center my-2">24/7 Power</h4>
                             </div>
@@ -103,7 +103,7 @@
                         <div class="card features-card shadow mb-3">
                             <div class="card-body">
                                 <figure class="text-center">
-                                    <img src="/assets/security.svg" alt="fast-loading.png" height="100px">
+                                    <img src="./assets/security.svg" alt="fast-loading.png" height="100px">
                                 </figure>
                                 <h4 class="text-center my-2">Security</h4>
                             </div>
@@ -113,7 +113,7 @@
                         <div class="card features-card shadow mb-3">
                             <div class="card-body">
                                 <figure class="text-center">
-                                    <img src="/assets/Map_Isometric (1).png" alt="fast-loading.png" height="100px">
+                                    <img src="./assets/Map_Isometric (1).png" alt="fast-loading.png" height="100px">
                                 </figure>
                                 <h4 class="text-center my-2">Location</h4>
                             </div>
@@ -123,7 +123,7 @@
                         <div class="card features-card shadow mb-3">
                             <div class="card-body">
                                 <figure class="text-center">
-                                    <img src="/assets/sport.png" alt="fast-loading.png" height="100px">
+                                    <img src="./assets/sport.png" alt="fast-loading.png" height="100px">
                                 </figure>
                                 <h4 class="text-center my-2">Sport</h4>
                             </div>
@@ -138,28 +138,28 @@
                 <div id="carouselExampleSlidesOnly" class="carousel card shadow col slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="/assets/hfyv5.JPG" class="card-img-top mb-1" alt="security">
+                            <img src="./assets/hfyv5.JPG" class="card-img-top mb-1" alt="security">
                             <div class="card-body mb-2">
                                 <p class="card-title font-color fw-semibold fs-3">Sport</p>
                                 <p class="card-text fw-normal">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="/assets/hfyv3.jpg" class="card-img-top mb-1" alt="security">
+                            <img src="./assets/hfyv3.jpg" class="card-img-top mb-1" alt="security">
                             <div class="card-body mb-2">
                                 <p class="card-title font-color fw-semibold fs-3">Security</p>
                                 <p class="card-text fw-normal">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="/assets/hfyv2.jpg" class="card-img-top mb-1" alt="security">
+                            <img src="./assets/hfyv2.jpg" class="card-img-top mb-1" alt="security">
                             <div class="card-body mb-2">
                                 <p class="card-title font-color fw-semibold fs-3">Location</p>
                                 <p class="card-text fw-normal">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="/assets/hfyv4.JPG" class="card-img-top mb-1" alt="security">
+                            <img src="./assets/hfyv4.JPG" class="card-img-top mb-1" alt="security">
                             <div class="card-body mb-2">
                                 <p class="card-title font-color fw-semibold fs-3">24/7 Power</p>
                                 <p class="card-text fw-normal">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -186,10 +186,10 @@
                         <div id="carouselExampleSlidesOnly" class="card-body carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="/assets/hfyv1.jpg" class="img-fluid rounded d-block w-100" alt="interior image">
+                                    <img src="./assets/hfyv1.jpg" class="img-fluid rounded d-block w-100" alt="interior image">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="/assets/hfyv5.JPG" class="img-fluid rounded d-block w-100" alt="interior image">
+                                    <img src="./assets/hfyv5.JPG" class="img-fluid rounded d-block w-100" alt="interior image">
                                 </div>
                             </div>
                         </div>
@@ -200,10 +200,10 @@
                         <div id="carouselExampleSlidesOnly" class="card-body carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="/assets/hfyv2.jpg" class="img-fluid rounded d-block w-100" alt="interior image">
+                                    <img src="./assets/hfyv2.jpg" class="img-fluid rounded d-block w-100" alt="interior image">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="/assets/hfyv4.JPG" class="img-fluid rounded d-block w-100" alt="interior image">
+                                    <img src="./assets/hfyv4.JPG" class="img-fluid rounded d-block w-100" alt="interior image">
                                 </div>
                             </div>
                         </div>
@@ -214,10 +214,10 @@
                         <div id="carouselExampleSlidesOnly" class="card-body carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="/assets/hfyv3.jpg" class="img-fluid rounded d-block w-100" alt="interior image">
+                                    <img src="./assets/hfyv3.jpg" class="img-fluid rounded d-block w-100" alt="interior image">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="/assets/hfyv5.JPG" class="img-fluid rounded d-block w-100" alt="interior image">
+                                    <img src="./assets/hfyv5.JPG" class="img-fluid rounded d-block w-100" alt="interior image">
                                 </div>
                             </div>
                         </div>
@@ -228,10 +228,10 @@
                         <div id="carouselExampleSlidesOnly" class="card-body carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="/assets/hfyv2.jpg" class="img-fluid rounded d-block w-100" alt="interior image">
+                                    <img src="./assets/hfyv2.jpg" class="img-fluid rounded d-block w-100" alt="interior image">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="/assets/hfyv3.jpg" class="img-fluid rounded d-block w-100" alt="interior image">
+                                    <img src="./assets/hfyv3.jpg" class="img-fluid rounded d-block w-100" alt="interior image">
                                 </div>
                             </div>
                         </div>
@@ -242,10 +242,10 @@
                         <div id="carouselExampleSlidesOnly" class="card-body carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="/assets/hfyv1.jpg" class="img-fluid rounded d-block w-100" alt="interior image">
+                                    <img src="./assets/hfyv1.jpg" class="img-fluid rounded d-block w-100" alt="interior image">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="/assets/hfyv4.JPG" class="img-fluid rounded d-block w-100" alt="interior image">
+                                    <img src="./assets/hfyv4.JPG" class="img-fluid rounded d-block w-100" alt="interior image">
                                 </div>
                             </div>
                         </div>
@@ -256,10 +256,10 @@
                         <div id="carouselExampleSlidesOnly" class="card-body carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="/assets/hfyv1.jpg" class="img-fluid rounded d-block w-100" alt="interior image">
+                                    <img src="./assets/hfyv1.jpg" class="img-fluid rounded d-block w-100" alt="interior image">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="/assets/hfyv5.JPG" class="img-fluid rounded d-block w-100" alt="interior image">
+                                    <img src="./assets/hfyv5.JPG" class="img-fluid rounded d-block w-100" alt="interior image">
                                 </div>
                             </div>
                         </div>
@@ -314,7 +314,7 @@
             <div class="row text-md-left">
 
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-1">
-                    <img src="/assets/hflogo.png" alt="holy family logo" class="lg-sz" srcset="">
+                    <img src="/.assets/hflogo.png" alt="holy family logo" class="lg-sz" srcset="">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-warnimg">Holy Family Youth Village</h5>
                 </div>
 
