--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
             <div class="row text-md-left">
 
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-1">
-                    <img src="/.assets/hflogo.png" alt="holy family logo" class="lg-sz" srcset="">
+                    <img src="./assets/hflogo.png" alt="holy family logo" class="lg-sz" srcset="">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-warnimg">Holy Family Youth Village</h5>
                 </div>
 
