--- a/Gallery Page/gallery.html
+++ b/Gallery Page/gallery.html
@@ -7,7 +7,7 @@
     <title>HFYV</title>
     <link rel="shortcut icon" href="/assets/hflogo.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="./gallery.css">
+    <link rel="stylesheet" href="/gallery.css">
     <script src="https://kit.fontawesome.com/e918c11bd2.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -129,7 +129,7 @@
             <div class="row text-md-left">
 
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-1">
-                    <img src="/assets/hflogo.png" alt="holy family logo" class="lg-sz" srcset="">
+                    <img src="../assets/hflogo.png" alt="holy family logo" class="lg-sz" srcset="">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-warnimg">Holy Family Youth Village</h5>
                 </div>
 
