--- a/Gallery Page/gallery.html
+++ b/Gallery Page/gallery.html
@@ -18,8 +18,8 @@
     <!-- Navigation Menu -->
     <nav class="navbar navbar-expand-lg bg-light sticky-top navbar-light py-2 shadow">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="./assets/hflogo.png" alt="Holy family logo" height= "60px">
+            <a class="navbar-brand" href="../index.html">
+                <img src="../assets/hflogo.png" alt="Holy family logo" height= "60px">
             </a>
             <button class="navbar-toggler shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="fas fa-stream m-2"></span>
@@ -30,7 +30,7 @@
                         <a class="nav-link" data-bs-toggle="modal" data-bs-target="#exampleModal" href="#">How To Book</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link activebtn" href="./Gallery Page/gallery.html">Gallery</a>
+                        <a class="nav-link activebtn" href="../Gallery Page/gallery.html">Gallery</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">FAQ</a>
