created the login and register page

--- a/Gallery Page/gallery.html
+++ b/Gallery Page/gallery.html
@@ -72,8 +72,8 @@
                 <div class="row align-item-center justify-content-center">
                     <div class="col-5 btn-group btn-group-md" role="group" aria-label="Basic outlined example">
                         <button type="button" data-filter="all" class="btn liss btn-outline-primary font-color">All</button>
-                        <button type="button" data-filter="exterior" class="btn liss hov btn-pri">Exterior</button>
-                        <button type="button" data-filter="interior" class="btn liss hov btn-pri">Interior</button>
+                        <button type="button" data-filter="exterior" class="btn liss hov btn-pry">Exterior</button>
+                        <button type="button" data-filter="interior" class="btn liss hov btn-pry">Interior</button>
                     </div>
                 </div>
 
@@ -147,8 +147,8 @@
                     <p><i class="fas fa-phone me-3"></i> +234 8064689745</p>
                 </div>
                 <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <p class="text-center"><a href="#" class="btn btn-pri brn mx-3 shadow">Login</a></p>
-                    <p  class="text-center"><a href="#" class="btn brn btn-sec shadow">Register</a></p>
+                    <p class="text-center"><a href="../login page/login.html" class="btn btn-pri brn mx-3 shadow">Login</a></p>
+                    <p  class="text-center"><a href="../register page/register.html" class="btn brn btn-sec shadow">Register</a></p>
                     
                 </div>
 
