--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                 <h3 class="text-light my-3">To</h3>
                 <h1 class="text-light my-4">Holy Family Youth Village</h1>
                 <div class="row justify-content-center my-3 p-1">
-                    <a href="#" class="btn btn-pri wow mx-3 shadow col-4">Login</a>
-                    <a href="#" class="btn btn-sec  wow mx-3 shadow col-4">Register</a>
+                    <a href="./login page/login.html" class="btn btn-pri wow mx-3 shadow col-4">Login</a>
+                    <a href="./register page/register.html" class="btn btn-sec  wow mx-3 shadow col-4">Register</a>
                 </div>
             </div>
         </div>
@@ -332,8 +332,8 @@
                     <p><i class="fas fa-phone me-3"></i> +234 8064689745</p>
                 </div>
                 <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <p class="text-center"><a href="#" class="btn btn-pri brn mx-3 shadow">Login</a></p>
-                    <p  class="text-center"><a href="#" class="btn brn btn-sec shadow">Register</a></p>
+                    <p class="text-center"><a href="./login page/login.html" class="btn btn-pri brn mx-3 shadow">Login</a></p>
+                    <p  class="text-center"><a href="./register page/register.html" class="btn brn btn-sec shadow">Register</a></p>
                     
                 </div>
 
