--- a/register page/register.html
+++ b/register page/register.html
@@ -71,32 +71,35 @@
                         </div>
                         <div class="row mx-2 pt-3">
                             <div class="col-md-6 form-floating mb-2">
-                                <input type="text" class="form-control" id="firstName" placeholder="First Name">
+                                <input type="text" class="form-control" id="firstName" placeholder="First Name" required>
                                 <label for="firstName">First Name</label>
                             </div>
                             <div class="col-md-6 form-floating mb-2">
-                                <input type="text" class="form-control" id="lastName" placeholder="Last Name">
+                                <input type="text" class="form-control" id="lastName" placeholder="Last Name" required>
                                 <label for="lastName">Last Name</label>
                             </div>
                             <div class="col-md-6 form-floating mb-2">
-                                <input type="number" class="form-control" id="phoneNo" placeholder="Phone No">
+                                <input type="number" class="form-control" id="phoneNo" placeholder="Phone No" required>
                                 <label for="phoneNo">Phone No</label>
                             </div>
                             <div class="col-md-6 form-floating mb-2">
-                                <input type="text" class="form-control" id="roomId" placeholder="Room Id">
+                                <input type="text" class="form-control" id="roomId" placeholder="Room Id" required>
                                 <label for="roomId">Room Id</label>
                             </div>
                             <div class="col-12 form-floating mb-2">
-                                <input type="email" class="form-control" id="email" placeholder="Email">
+                                <input type="email" class="form-control" id="email" placeholder="Email" required>
                                 <label for="email">Email</label>
                             </div>
                             <div class="col-12 form-floating mb-2">
-                                <input type="password" class="form-control" id="create-password" placeholder="Create Password">
+                                <input type="password" class="form-control" id="create-password" placeholder="Create Password" required>
                                 <label for="create-password">Create Password</label>
                             </div>
                             <div class="col-12 form-floating mb-3">
-                                <input type="password" class="form-control" id="con-password" placeholder="Confirm Password">
+                                <input type="password" class="form-control" id="con-password" placeholder="Confirm Password" required>
                                 <label for="con-password">Create Password</label>
+                            </div>
+                            <div class="col-12 my-1 mt-2 p-1">
+                                <button type="submit" class="btn btn-lg btn-primary mb-3">Register</button>
                             </div>
                         </div>
                         
@@ -131,7 +134,7 @@
                     <p><i class="fas fa-phone me-3"></i> +234 8064689745</p>
                 </div>
                 <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <p class="text-center"><a href="#" class="btn btn-pri brn mx-3 shadow">Login</a></p>
+                    <p class="text-center"><a href="../login page/login.html" class="btn btn-pri brn mx-3 shadow">Login</a></p>
                     <!-- <p  class="text-center"><a href="#" class="btn brn btn-sec shadow">Register</a></p> -->
                     
                 </div>
