--- a/login page/login.html
+++ b/login page/login.html
@@ -65,17 +65,17 @@
         <div class="row container justify-content-center align-items-center">
             <div class="col col-lg-6 col-md-8 my-4">
                 <div class="brd bg-white py-2">
-                    <form action="#" method="post">
+                    <form action="#" class="needs-validation" novalidate method="post">
                         <div class="align-content-center my-3 justify-content-center">
                             <h3 class="fonts">Login</h3>
                         </div>
                         <div class="row mx-2 pt-3">
                             <div class="col-12 form-floating mb-3">
-                                <input type="email" class="form-control" id="email" placeholder="Email">
+                                <input type="email" class="form-control" id="email" placeholder="Email" required>
                                 <label for="email">Email</label>
                             </div>
                             <div class="col-12 form-floating mb-2">
-                                <input type="password" class="form-control" id="password" placeholder="Password">
+                                <input type="password" class="form-control" id="password" placeholder="Password" required>
                                 <label for="password">Password</label>
                             </div>
                             <div class="align-content-start text-start mb-2  justify-content-center">
@@ -84,7 +84,7 @@
                             </div>
                             <div class="col-12 my-1 mt-2 p-1">
                                 <button type="submit" class="btn btn-lg btn-primary mb-3">Log In</button>
-                              </div>
+                            </div>
                         </div>
                         
                     </form>
@@ -119,7 +119,7 @@
                 </div>
                 <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
                     <!-- <p class="text-center"><a href="#" class="btn btn-pri brn mx-3 shadow">Login</a></p> -->
-                    <p  class="text-center"><a href="#" class="btn brn btn-sec shadow">Register</a></p>
+                    <p  class="text-center"><a href="../register page/register.html" class="btn brn btn-sec shadow">Register</a></p>
                     
                 </div>
 
