Updated the testomial

--- a/index.html
+++ b/index.html
@@ -274,12 +274,16 @@
             <div id="carouselExampleControls" class="carousel m-1 slide" data-bs-ride="carousel">
                 <div class="carousel-inner text-center">
                     <div class="carousel-item active">
-                        <h2 class="testi-comment">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum vero laborum aliquam ipsum, possimus ullam unde id.</h2>
-                        <h3 class="testi-name">Fr. Francis Okafor</h3>
+                        <h2 class="testi-comment">Whenever I think of The Holy Family Youth Village, I think of a home. Being in Holy Family , I learnt how to be more cultured, more calculative and principled. Holy Family taught me to be a better version of my self.</h2>
+                        <h3 class="testi-name">Anthony Eboh</h3>
                     </div>
                     <div class="carousel-item">
-                        <h2 class="testi-comment">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum vero laborum aliquam ipsum, possimus ullam unde id.</h2>
-                        <h3 class="testi-name">Fr. Dominic Obielosi</h3>
+                        <h2 class="testi-comment">I just love Holy Family for everything; the enduring and understanding management lead by Fr. Dom, the surroundings for pictures, the security is superb. Holy Family is just the best!</h2>
+                        <h3 class="testi-name">Anunandu Chisom Sylvia</h3>
+                    </div>
+                    <div class="carousel-item">
+                        <h2 class="testi-comment">I am grateful and elated I reside in Holy Family Youth Village throughout my academic years. I have no ounce of regret whatsoever. HFYV is undoubtably the  best University hostel in Nigeria.</h2>
+                        <h3 class="testi-name">Oragwuncha Feechukwu</h3>
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
